# callback-cell

./: Cargo.toml  LICENSE  README.md
callback_cell/: CHANGELOG.md  Cargo.toml
callback_cell/src/: lib.rs  test.rs
examples/: seg_queue.rs
src/: lib.rs  with_args.rs  without_args.rs
