[package]
name = "callback-cell"
version = "0.0.0-AFTER"
edition = "2021"
authors = ["Phoenix Kahlo <kahlo.phoenix@gmail.com>"]
description = "Like an Atomic<Option<Box<FnOnce()>>>"

[dependencies]

[dev-dependencies]
crossbeam = "0.8"

[dev-dependencies.tokio]
version = "1"
features = ["sync", "rt", "rt-multi-thread"]
