[package]
name = "callback_cell"
version ="0.1.0-AFTER"
edition = "2021"
authors = ["Phoenix Kahlo <kahlo.phoenix@gmail.com>"]
description = "Like an Atomic<Option<Box<FnOnce()>>>"
readme = "README.md"
repository = "https://github.com/gretchenfrage/callback-cell"
categories = ["concurrency"]
license = "MIT"

[dependencies]

[dev-dependencies]
crossbeam = "0.8"

[dev-dependencies.tokio]
version = "1"
features = ["sync", "rt", "rt-multi-thread"]
